syntax = "proto3";

option go_package = "sigmaos/kernel/proto";

message BootReq {
  string name = 1;
  string realmStr = 2;
  repeated string args = 3;
  repeated string env = 4;
}

message BootRep {
  string pidStr = 1;
}

message EvictKernelProcReq {
  string PidStr = 1;
}

message EvictKernelProcRep {
}

message SetCPUSharesReq {
  string PidStr = 1;
  int64 Shares = 2;
}

message SetCPUSharesRep {
}

message GetKernelSrvCPUUtilReq {
  string PidStr = 1;
}

message GetKernelSrvCPUUtilRep {
  double util = 1;
}

message ShutdownReq {
}

message ShutdownRep {
}
